# as6-genplatform

./: .gitignore  README.md  requirements-dev.txt
centos/: Dockerfile  Makefile  cmake_config.cmake
centos/cots/: Makefile  log4cplus-2.0.0.tar.bz2
ecoa-asctg/: CHANGELOG.md  README.md  pyproject.toml
ecoa-asctg/docs/TOR/: DGT2021741-ASCTG-TOR-TORTC.xlsx
ecoa-asctg/docs/VDD/: DGT2034171-ASCTG-VDD.md
ecoa-asctg/docs/source/: conf.py  index.rst  installation.rst  usage.rst
ecoa-asctg/src/ecoa_asctg/: __main__.py  (+1 more)
ecoa-exvt/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
ecoa-exvt/docs/TOR/: DGT2025319-EXVT-TOR-TORTC.xlsx
ecoa-exvt/docs/VDD/: DGT2034177-EXVT-VDD.md
ecoa-exvt/docs/source/: conf.py  index.rst  installation.rst  usage.rst
ecoa-exvt/src/ecoa/: __main__.py  _version.py  ecoa_global_config.py
ecoa-exvt/src/ecoa/XSD/: .project  catalog.xml  ip-address-deployment.xsd  ldp-fine-grain-deployment.xsd  nodes-deployment.xsd  release-notes.md
ecoa-exvt/src/ecoa/XSD/Schemas_ecoa/: catalog.xml  ecoa-bin-desc-2.0.xsd  ecoa-common-2.0.xsd  ecoa-cross-platforms-view-2.0.xsd  ecoa-deployment-2.0.xsd  ecoa-implementation-2.0.xsd  ecoa-interface-2.0.xsd  ecoa-interface-qos-2.0.xsd  ecoa-logicalsystem-2.0.xsd  ecoa-project-2.0.xsd  ecoa-types-2.0.xsd  ecoa-uid-2.0.xsd
ecoa-exvt/src/ecoa/XSD/Schemas_ecoa/guidance/: ecoa-insertion-policy-2.0.xsd  ecoa-module-behaviour-2.0.xsd  ecoa-udpbinding-2.0.xsd
ecoa-exvt/src/ecoa/XSD/Schemas_ecoa/sca/: ecoa-sca-2.0.xsd  ecoa-sca-attributes-2.0.xsd  sca-1.1-cd06-subset-2.0.xsd  sca-contribution-1.1-cd06-subset-2.0.xsd  sca-core-1.1-cd06-subset-2.0.xsd  sca-implementation-composite-1.1-cd06-subset-2.0.xsd
ecoa-exvt/src/ecoa/XSD/Schemas_ecoa/sca/extensions/: ecoa-sca-instance-2.0.xsd  ecoa-sca-interface-2.0.xsd
ecoa-exvt/src/ecoa/models/: PD_vd_repository.py  __init__.py  component.py  component_VD.py  component_implementation.py  component_type.py  composite.py  cross_PF_view.py  data_types.py  deployment.py  dynamic_trigger_instance.py  fine_grain_deployment.py  generic_module_instance.py  ip_address_deployment.py  library.py  logical_process.py  logical_system.py  module_binary_desc.py  module_implementation.py  module_instance.py  module_link.py  module_type.py  node.py  node_link.py  operation_type.py  pinfo.py  platform.py  platform_configuration.py  platform_link.py  property_classes.py  property_type.py  protection_domain.py  route.py  service_definition.py  trigger_instance.py  wire.py
ecoa-exvt/src/ecoa/parsers/: __init__.py  bin_desc_parser.py  component_implementation_checker.py  component_implementation_parser.py  component_type_parser.py  composite_parser.py  cross_PF_view_parser.py  deployment_parser.py  euid_parser.py  fine_grain_deployment_parser.py  ip_address_deployment_parser.py  library_parser.py  logicalsystem_parser.py  nodes_deployment_parser.py  project_parser.py  service_parser.py
ecoa-exvt/src/ecoa/utilities/: __init__.py  ecos_item.py  euid_generator.py  genplatform_config.py  library_utils.py  logs.py  namespaces.py  process.py  test_utils.py  xml_utils.py
ecoa-exvt/tests/: test_nop.py
ecoa-gentools/: pyproject.toml
ecoa-ldp/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
ecoa-ldp/docs/: Makefile  make.bat
ecoa-ldp/src/ecoa_genplatform/generators/C/lib/: CMakeLists.txt  Doxyfile  ECOA.h  ECOA.hpp  ECOA_simple_types_serialization.c  ECOA_simple_types_serialization.h  ldp_VD.c  ldp_VD.h  ldp_VD_reader_manager.c  ldp_VD_writter_manager.c  ldp_comp_util.c  ldp_comp_util.h  ldp_core_udp.c  ldp_dynamic_trigger.c  ldp_dynamic_trigger.h  ldp_fifo.c  ldp_fifo.h  ldp_fifo_elt_pool.c  ldp_fifo_elt_pool.h  ldp_fifo_manager.c  ldp_fifo_manager.h  ldp_fine_grain_deployment.h  ldp_launcher.c  ldp_launcher.h  ldp_list.c  ldp_list.h  ldp_log-console.c  ldp_log-log4cplus.c  ldp_log-lttng-tracef.h  ldp_log-lttng.c  ldp_log-zlog.c  ldp_log.h  ldp_log_platform.c  ldp_log_platform.h  ldp_mod_container_util.c  ldp_mod_container_util.h  ldp_mod_lifecycle.c  ldp_mod_lifecycle.h  ldp_network.c  ldp_network.h  (+13 more)
ecoa-ldp/src/ecoa_genplatform/generators/C/lib/eli/: ldp_ELI.c  ldp_ELI.h  ldp_ELI_msg_management.c  ldp_ELI_msg_management.h  ldp_ELI_udp.c  ldp_ELI_udp.h  ldp_multicast.c  ldp_multicast.h
ecoa-ldp/src/ecoa_genplatform/generators/C/lib/tcp/: ldp_tcp.c  ldp_tcp.h  ldp_tcp_comp_server.c  ldp_tcp_main_server.c
ecoa-ldp/src/ecoa_genplatform/generators/C/lib/udp/: ldp_udp.c  ldp_udp_comp_server.c  ldp_udp_main_server.c
ecoa-ldp/src/ecoa_genplatform/generators/C/lib/unix/: ldp_fine_grain_deployment.c  ldp_thread.c  ldp_time_manager.c
examples/: cmake_config.cmake
examples/marx_brothers/: README.md  marx_brothers.project.xml
(+964 files in other folders)
